# webrogue

./: .gitignore  .gitmodules  CMakeLists.txt  License  main.cpp  make_webrogue.cmake
.github/workflows/: build.yml  try_build.yml
cmake/: parse_api_header.cmake
mods/: CMakeLists.txt
mods/basecontent/: CMakeLists.txt  basecontent.cpp  basecontent.ewrmod  basecontent.wrmod  schema.sql  sqlpp_schema.h
mods/core/: core.wrmod  make_stdlib.sh
mods/core/include/: core.h  macros.h  wrsqlite.h
mods/core/src/: core.cpp  exceptions.cpp  wrout.cpp  wrsqlite.cpp
mods/tools/: analyze_missing_symbol.py  download_sysroot.cmake  download_toolchain.cmake
scripts/: srv.py  webtest.sh
src/core/: ApiObject.cpp  ApiObject.hpp  CompactLinking.cpp  CompactLinking.hpp  Config.hpp  ConsoleWriter.cpp  ModsRuntime.cpp  ModsRuntime.hpp  Output.cpp  Output.hpp  ResourceStorage.cpp  ResourceStorage.hpp  WASIObject.cpp  WASIObject.hpp  WASIObjectFS.cpp  byteswap.hpp  load_embedded_mods.hpp  wasi_functions.def  wasi_functions.h  wasi_templates.hpp  webrogueMain.cpp
src/linker/: CMakeLists.txt  archive_reader.cc  archive_reader.h  compact_linker.cc  compact_linker.h  ir.h  result.h  synthesizer.cc  synthesizer.h  wasm-ld-mini.cc
src/linker/synthesizer/: import-synthesizer.h
src/linker/test_src/: CMakeLists.txt  t1_1.dump  t1_1.wasm  t1_2.dump  t1_2.wasm  t1_lld.wasm  t1_lld_strip.wasm  t1_my.wasm
src/outputs/curses/: CursesOutput.cpp
src/outputs/sdl/: SDLOutput.cpp  SDLOutput.hpp
src/runtimes/embedded/: embedded_runtime.cpp  embedded_runtime.hpp  gen_glue_embedded.cmake  (+6 more)
(+27 files in other folders)
